[tool.poetry]
name = "swissmetnet"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
swn = 'swissmetnet.main:run'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
pymongo = "^4.3.3"
boto3 = "^1.26.33"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
