[tool.poetry]
name = "swissmetnet"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
swn = 'swissmetnet.main:run'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
pymongo = "^4.8.0"
boto3 = "^1.35.19"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.8"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
