[tool.poetry]
name = "swissmetnet"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
swn = 'swissmetnet.main:run'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
pymongo = "^4.8.0"
boto3 = "^1.35.19"
pyarrow = "^17.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^4.2.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
